--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container pb-6">
             <h1 class="pb-1 font-bold text-4xl font-semibold leading-none flex">
             	<svg class="w-8 h-8 inline-block self-center mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 15.707a1 1 0 010-1.414L14.586 10l-4.293-4.293a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0z" clip-rule="evenodd"></path><path fill-rule="evenodd" d="M4.293 15.707a1 1 0 010-1.414L8.586 10 4.293 5.707a1 1 0 011.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-            	<span>Капитализм разрушится скоро?</span>
+            	<span>Капитализм не жизнеспособен?</span>
             </h1>
         </div>
 	</div>
